kubernetes/apps/main/network/echo/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-main
spec:
  hostnames:
    - "${SUBDOMAIN}.${SECRET_MAIN_DOMAIN_NAME}"
  parentRefs:
    - name: ${GATEWAY:=envoy-external}
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: echo
          port: 8080
